Thu Aug 24 15:27:39 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/socket/socketport.h: use `extern int h_errno' if needed.

Sat Aug 19 01:34:02 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/sdbm/_sdbm.c (sdbm_prep): flags should be or-ed by O_BINARY on
	  Win32 too.

	* ext/sdbm/_sdbm.c (makroom): fill hole with 0 on Win32 too.

Wed Aug 16 15:30:58 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.4.6 released.

Tue Aug 15 17:30:59 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (frame_dup): should set flag FRAME_MALLOC after
	  argv allocation.

	* eval.c (blk_free): should not free argv if GC was called before
	  frame_dup.

Tue Aug 15 01:45:28 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_eof): should return true at the end of ARGF without
	  checking stdout if arguments are given.

Mon Aug 14 10:34:32 2000  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_status): status should return false for normal
	  termination, nil for termination by exception.

Wed Aug  9 13:24:25 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* win32/win32.[ch]: emulate rename(2).

Mon Aug  7 13:59:12 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.h (CLONESETUP): should copy flags before any potential
	  object allocation.

	* regex.c (re_match): check for stack depth was needed.

Sat Aug  5 16:43:43 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* lib/ftools.rb (compare, safe_unlink, chmod): avoid warnings.

	* lib/ftools.rb (move): typo. not `tpath', but `to'.

Wed Aug  2 18:27:47 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_continuation_call): prohibit Continuation#call across
	  threads.

Sat Jul 29 23:42:04 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* dir.c (dir_each): should check whether dir is closed during the
	  block execution. (ruby-bugs:#PR47)

Sat Jul 29 21:57:30 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ruby.c (rubylib_mangle): provide another buffer for the result.